# c-skeleton

./: AUTHORS  Makefile  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
conf/: Makefile.am
src/: Makefile  Makefile.am  Makefile.in  hello.c
src/.deps/: hello.Po
